--- a/project_management_app/project_task/templates/project_task/home.html
+++ b/project_management_app/project_task/templates/project_task/home.html
@@ -83,6 +83,9 @@
     Create Sprint
 </button>
 
+<!-- Toggle button for Light/Dark themes -->
+    <button id="theme-toggle">Light/Dark Theme</button>
+
 <!-- Modal for creating a new sprint -->
 <div class="modal fade" id="createNewSprint" tabindex="-1" role="dialog" aria-labelledby="sprintModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -123,4 +126,36 @@
     });
 </script>
 
+{% endblock %}
+
+{% block js %}
+    <script>
+    document.getElementById('theme-toggle').addEventListener('click', function() {
+            let body = document.body;
+            let themeButton = document.getElementById('theme-toggle');
+
+            if (body.classList.contains('light-theme')) {
+                body.classList.remove('light-theme');
+                body.classList.add('dark-theme');
+                themeButton.textContent = 'Light Theme';
+                localStorage.setItem('theme', 'dark-theme');
+            } else {
+                body.classList.remove('dark-theme');
+                body.classList.add('light-theme');
+                themeButton.textContent = 'Dark Theme';
+                localStorage.setItem('theme', 'light-theme');
+            }
+        });
+
+            // Set the default theme of page to the 'light theme'
+            let storedTheme = localStorage.getItem('theme') || 'light-theme';
+            document.body.classList.add(storedTheme);
+
+            // Set the button text based on the current theme
+            if (storedTheme === 'light-theme') {
+                document.getElementById('theme-toggle').textContent = 'Dark Theme';
+            } else {
+                document.getElementById('theme-toggle').textContent = 'Light Theme';
+            }
+    </script>
 {% endblock %}
