--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -78,6 +78,8 @@
 
 {% block content %}
     <h1>Sprint Backlog</h1>
+    <!-- Toggle button for Light/Dark themes -->
+    <button id="theme-toggle">Light/Dark Theme</button>
 
     <div class="container-fluid">
         <table class="table table-striped table-bordered">
@@ -103,4 +105,37 @@
             </tbody>
         </table>
     </div>
+{% endblock %}
+
+{% block js %}
+    <script>
+    //Toggle between light and dark themes
+        document.getElementById('theme-toggle').addEventListener('click', function() {
+            let body = document.body;
+            let themeButton = document.getElementById('theme-toggle');
+
+            if (body.classList.contains('light-theme')) {
+                body.classList.remove('light-theme');
+                body.classList.add('dark-theme');
+                themeButton.textContent = 'Light Theme';
+                localStorage.setItem('theme', 'dark-theme');
+            } else {
+                body.classList.remove('dark-theme');
+                body.classList.add('light-theme');
+                themeButton.textContent = 'Dark Theme';
+                localStorage.setItem('theme', 'light-theme');
+            }
+        });
+
+            // Set the default theme of page to the 'light theme'
+            let storedTheme = localStorage.getItem('theme') || 'light-theme';
+            document.body.classList.add(storedTheme);
+
+            // Set the button text based on the current theme
+            if (storedTheme === 'light-theme') {
+                document.getElementById('theme-toggle').textContent = 'Dark Theme';
+            } else {
+                document.getElementById('theme-toggle').textContent = 'Light Theme';
+            }
+    </script>
 {% endblock %}
