--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -138,6 +138,14 @@
                         <input type="text" class="form-control" id="assignee" name="assignee" value="">
                     </div>
                     <div class="form-group">
+                        <label for="editTaskHours">Log Hours</label>
+                        <input type="number" class="form-control" id="editTaskHours" min="0">
+                    </div>
+                    <div class="form-group">
+                        <label for="editTaskTotalHours">Total Hours</label>
+                        <input type="text" class="form-control" id="editTaskTotalHours" readonly>
+                    </div>
+                    <div class="form-group">
                         <label for="status">Status:</label>
                         <select class="form-control" id="status" name="status">
                             <option value='NOT'>Incomplete</option>
