--- a/project_management_app/templates/admin/index.html
+++ b/project_management_app/templates/admin/index.html
@@ -1,22 +1,17 @@
 {% extends "admin/base_site.html" %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}
-    <link rel="stylesheet" href="{% static "admin/css/dashboard.css" %}">
-{% endblock %}
-
 {% block coltype %}colMS{% endblock %}
 
 {% block bodyclass %}{{ block.super }} dashboard{% endblock %}
 
-{% block nav-breadcrumbs %}{% endblock %}
-{% block branding %}<h1>Site Administration Portal</h1>{% endblock %}
-{% block content_title %}{% if title %}<h1>Admin Dash Board</h1>{% endif %}{% endblock %}
-{% block sidenavbar %}
-{% endblock %}
-{% block content %}
+{% block nav-breadcrumbs %}{{ block.super }}{% endblock %}
 
-<div id="content-main">
-  {% include "admin/app_list.html" with app_list=app_list show_changelinks=True %}
-</div>
+{% block nav-sidebar %}
+{{ block.super }}
+{% endblock %}
+
+{% block content %}
+    <!-- TODO: Need to Implement Dashboard -->
+    <p>TBC: Need to Implement Dashboard</p>
 {% endblock %}
